Oppdatering etter flytting av ekstern-api